--- a/trunk/canvasdemo/war/Canvasdemo.html
+++ b/trunk/canvasdemo/war/Canvasdemo.html
@@ -24,6 +24,8 @@
     <!-- If you add any GWT meta tags, they must   -->
     <!-- be added before this line.                -->
     <!--                                           -->
+    <script type="text/javascript" language="text/javascript" src="js/core.js"></script>
+	<script type="text/javascript" language="text/javascript" src="js/canvas.js"></script>
     <script type="text/javascript" language="javascript" src="canvasdemo/canvasdemo.nocache.js"></script>
   </head>
 
@@ -32,7 +34,7 @@
   <!-- you can leave the body empty if you want  -->
   <!-- to create a completely dynamic UI.        -->
   <!--                                           -->
-  <body>
+  <body onload="drawImage();draw();">
 
     <!-- OPTIONAL: include this if you want history support -->
     <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
@@ -45,19 +47,7 @@
       </div>
     </noscript>
 
-    <h1>Web Application Starter Project</h1>
-
-    <table align="center">
-      <tr>
-        <td colspan="2" style="font-weight:bold;">Please enter your name:</td>        
-      </tr>
-      <tr>
-        <td id="nameFieldContainer"></td>
-        <td id="sendButtonContainer"></td>
-      </tr>
-      <tr>
-        <td colspan="2" style="color:red;" id="errorLabelContainer"></td>
-      </tr>
-    </table>
+    <canvas id="canvas" width="180" height="130"></canvas>
+	<canvas id="canvas2" width="180" height="130"></canvas>
   </body>
 </html>
