--- a/canvasdemo/war/Canvasdemo.html
+++ b/canvasdemo/war/Canvasdemo.html
@@ -24,8 +24,6 @@
     <!-- If you add any GWT meta tags, they must   -->
     <!-- be added before this line.                -->
     <!--                                           -->
-    <script type="text/javascript" language="text/javascript" src="js/core.js"></script>
-	<script type="text/javascript" language="text/javascript" src="js/canvas.js"></script>
     <script type="text/javascript" language="javascript" src="canvasdemo/canvasdemo.nocache.js"></script>
   </head>
 
@@ -34,7 +32,7 @@
   <!-- you can leave the body empty if you want  -->
   <!-- to create a completely dynamic UI.        -->
   <!--                                           -->
-  <body onload="drawImage();draw();">
+  <body>
 
     <!-- OPTIONAL: include this if you want history support -->
     <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
@@ -47,7 +45,5 @@
       </div>
     </noscript>
 
-    <canvas id="canvas" width="180" height="130"></canvas>
-	<canvas id="canvas2" width="180" height="130"></canvas>
   </body>
 </html>
